add book section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <h1 class="Section-Title">Our war-tested, lean UX process</h1>
   </section>
 
+  <section>
+    <h1 class="Section-Subtitle">We wrote a book on designing outstanding digital products</h1>
+  </section>
+
   <section class="dark">
     <h1 class="Section-Title-White">Our team</h1>
   </section>
