--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
 
   <header class="dark">
     <div class="wrap">
+      <nav class="menu">
+        <a href="#" class="menu-item logo">Logo</a>
+        <a href="#" class="menu-item">Case Studies</a>
+        <a href="#" class="menu-item">UX Design Services</a>
+        <a href="#" class="menu-item">UX Blog</a>
+        <a href="#" class="menu-item">About Us</a>
+        <a href="#" class="menu-item">Contact</a>
+      </nav>
       <h1 class="Page-Title">Let’s design digital products people will love.</h1>
-    <div>
+    </div>
   </header>
 
   <section>
