--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <header class="dark">
+  <header class="dark hero">
     <div class="wrap">
       <nav class="menu">
         <a href="#" class="menu-item logo">Logo</a>
@@ -19,7 +19,7 @@
         <a href="#" class="menu-item">UX Design Services</a>
         <a href="#" class="menu-item">UX Blog</a>
         <a href="#" class="menu-item">About Us</a>
-        <a href="#" class="menu-item">Contact</a>
+        <a href="#" class="menu-item contact-button">Contact</a>
       </nav>
       <h1 class="Page-Title">Let’s design digital products people will love.</h1>
     </div>
