--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     <div class="wrap">
       <h1 class="Section-Title-Black">Meet your new UX team!</h1>
       <ul class="grid">
-        <li class="grid-card">We teach design.</li>
-        <li class="grid-card">We visit you from time to time to have workshops together.</li>
-        <li class="grid-card">We really understand your business.</li>
-        <li class="grid-card">We are fun to work with!</li>
-        <li class="grid-card">We bring top-notch design & research skills to your team.</li>
-        <li class="grid-card">We work closely together with you, as a true extension of your team.</li>
+        <li class="grid-card Card-Title-Small">We teach design.</li>
+        <li class="grid-card Card-Title-Small">We visit you from time to time to have workshops together.</li>
+        <li class="grid-card Card-Title-Small">We really understand your business.</li>
+        <li class="grid-card Card-Title-Small">We are fun to work with!</li>
+        <li class="grid-card Card-Title-Small">We bring top-notch design & research skills to your team.</li>
+        <li class="grid-card Card-Title-Small">We work closely together with you, as a true extension of your team.</li>
       </ul>
     </div>
   </section>
