book grid layout

--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
   </section>
 
   <section>
-    <div class="wrap">
+    <div class="wrap book-grid">
+      <img src="img-book.jpg" alt="">
       <h1 class="Section-Subtitle">We wrote a book on designing outstanding digital products</h1>
+      <a href="#">Learn more</a>
     </div>
   </section>
 
