book grid button style

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="wrap book-grid">
       <img src="img-book.jpg" alt="">
       <h1 class="Section-Subtitle">We wrote a book on designing outstanding digital products</h1>
-      <a href="#">Learn more</a>
+      <a href="#" class="button button-blue">Learn more</a>
     </div>
   </section>
 
